Added infused cloth - base functions, and sewing machine, no functionality yet.

--- a/src/main/resources/assets/supersteve/lang/en_US.lang
+++ b/src/main/resources/assets/supersteve/lang/en_US.lang
@@ -1,3 +1,6 @@
 item.ss_cape.name=Cape
+item.ss_infusedcloth.name=Infused Cloth
+
+tile.ss_sewingmachine.name=Sewing Machine
 
 itemGroup.supersteve=Super Steve
